// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sketch renders correctly 1`] = `
<div
  className="sketch-picker "
  style={
    {
      "background": "#fff",
      "borderRadius": "4px",
      "boxShadow": "0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15)",
      "boxSizing": "initial",
      "padding": "10px 10px 0",
      "width": 200,
    }
  }
>
  <div
    style={
      {
        "overflow": "hidden",
        "paddingBottom": "75%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "background": "hsl(249.99999999999994,100%, 50%)",
          "borderRadius": undefined,
          "inset": "0px",
          "position": "absolute",
        }
      }
    >
      <style>
        
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
      </style>
      <div
        className="saturation-white"
        style={
          {
            "borderRadius": undefined,
            "inset": "0px",
            "position": "absolute",
          }
        }
      >
        <div
          className="saturation-black"
          style={
            {
              "borderRadius": undefined,
              "boxShadow": undefined,
              "inset": "0px",
              "position": "absolute",
            }
          }
        />
        <div
          style={
            {
              "cursor": "default",
              "left": "66.66666666666667%",
              "position": "absolute",
              "top": "70%",
            }
          }
        >
          <div
            style={
              {
                "borderRadius": "50%",
                "boxShadow": "0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4)",
                "cursor": "hand",
                "height": "4px",
                "transform": "translate(-2px, -2px)",
                "width": "4px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="flexbox-fix"
    style={
      {
        "display": "flex",
      }
    }
  >
    <div
      style={
        {
          "flex": "1",
          "padding": "4px 0",
        }
      }
    >
      <div
        style={
          {
            "height": "10px",
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          style={
            {
              "borderRadius": undefined,
              "boxShadow": undefined,
              "inset": "0px",
              "position": "absolute",
            }
          }
        >
          <div
            className="hue-horizontal"
            onMouseDown={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              {
                "borderRadius": undefined,
                "height": "100%",
                "padding": "0 2px",
                "position": "relative",
              }
            }
          >
            <style>
              
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
            </style>
            <div
              style={
                {
                  "left": "69.44444444444443%",
                  "position": "absolute",
                  "top": undefined,
                }
              }
            >
              <div
                style={
                  {
                    "background": "#fff",
                    "borderRadius": "1px",
                    "boxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                    "height": "8px",
                    "marginTop": "1px",
                    "transform": "translateX(-2px)",
                    "width": "4px",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          {
            "display": undefined,
            "height": "10px",
            "marginTop": "4px",
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          style={
            {
              "borderRadius": undefined,
              "inset": "0px",
              "position": "absolute",
            }
          }
        >
          <div
            style={
              {
                "borderRadius": undefined,
                "inset": "0px",
                "overflow": "hidden",
                "position": "absolute",
              }
            }
          >
            <div
              style={
                {
                  "background": "url(null) center left",
                  "borderRadius": undefined,
                  "boxShadow": undefined,
                  "inset": "0px",
                  "position": "absolute",
                }
              }
            />
          </div>
          <div
            style={
              {
                "background": "linear-gradient(to right, rgba(34,25,77, 0) 0%,
           rgba(34,25,77, 1) 100%)",
                "borderRadius": undefined,
                "boxShadow": undefined,
                "inset": "0px",
                "position": "absolute",
              }
            }
          />
          <div
            onMouseDown={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              {
                "height": "100%",
                "margin": "0 3px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                {
                  "left": "100%",
                  "position": "absolute",
                  "top": undefined,
                }
              }
            >
              <div
                style={
                  {
                    "background": "#fff",
                    "borderRadius": "1px",
                    "boxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                    "height": "8px",
                    "marginTop": "1px",
                    "transform": "translateX(-2px)",
                    "width": "4px",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        {
          "borderRadius": "3px",
          "height": "24px",
          "marginLeft": "4px",
          "marginTop": "4px",
          "position": "relative",
          "width": "24px",
        }
      }
    >
      <div
        style={
          {
            "background": "url(null) center left",
            "borderRadius": undefined,
            "boxShadow": undefined,
            "inset": "0px",
            "position": "absolute",
          }
        }
      />
      <div
        style={
          {
            "background": "rgba(34,25,77,1)",
            "borderRadius": "2px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25)",
            "inset": "0px",
            "position": "absolute",
          }
        }
      />
    </div>
  </div>
  <div
    className="flexbox-fix"
    style={
      {
        "display": "flex",
        "paddingTop": "4px",
      }
    }
  >
    <div
      style={
        {
          "flex": "2",
        }
      }
    >
      <div
        style={
          {
            "position": "relative",
          }
        }
      >
        <input
          id="rc-editable-input-1"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          spellCheck="false"
          style={
            {
              "border": "none",
              "boxShadow": "inset 0 0 0 1px #ccc",
              "fontSize": "11px",
              "padding": "4px 10% 3px",
              "width": "80%",
            }
          }
          value="22194D"
        />
        <label
          htmlFor="rc-editable-input-1"
          onMouseDown={[Function]}
          style={
            {
              "color": "#222",
              "cursor": undefined,
              "display": "block",
              "fontSize": "11px",
              "paddingBottom": "4px",
              "paddingTop": "3px",
              "textAlign": "center",
              "textTransform": "capitalize",
            }
          }
        >
          hex
        </label>
      </div>
    </div>
    <div
      style={
        {
          "flex": "1",
          "paddingLeft": "6px",
        }
      }
    >
      <div
        style={
          {
            "position": "relative",
          }
        }
      >
        <input
          id="rc-editable-input-2"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          spellCheck="false"
          style={
            {
              "border": "none",
              "boxShadow": "inset 0 0 0 1px #ccc",
              "fontSize": "11px",
              "padding": "4px 10% 3px",
              "width": "80%",
            }
          }
          value="34"
        />
        <label
          htmlFor="rc-editable-input-2"
          onMouseDown={[Function]}
          style={
            {
              "color": "#222",
              "cursor": undefined,
              "display": "block",
              "fontSize": "11px",
              "paddingBottom": "4px",
              "paddingTop": "3px",
              "textAlign": "center",
              "textTransform": "capitalize",
            }
          }
        >
          r
        </label>
      </div>
    </div>
    <div
      style={
        {
          "flex": "1",
          "paddingLeft": "6px",
        }
      }
    >
      <div
        style={
          {
            "position": "relative",
          }
        }
      >
        <input
          id="rc-editable-input-3"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          spellCheck="false"
          style={
            {
              "border": "none",
              "boxShadow": "inset 0 0 0 1px #ccc",
              "fontSize": "11px",
              "padding": "4px 10% 3px",
              "width": "80%",
            }
          }
          value="25"
        />
        <label
          htmlFor="rc-editable-input-3"
          onMouseDown={[Function]}
          style={
            {
              "color": "#222",
              "cursor": undefined,
              "display": "block",
              "fontSize": "11px",
              "paddingBottom": "4px",
              "paddingTop": "3px",
              "textAlign": "center",
              "textTransform": "capitalize",
            }
          }
        >
          g
        </label>
      </div>
    </div>
    <div
      style={
        {
          "flex": "1",
          "paddingLeft": "6px",
        }
      }
    >
      <div
        style={
          {
            "position": "relative",
          }
        }
      >
        <input
          id="rc-editable-input-4"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          spellCheck="false"
          style={
            {
              "border": "none",
              "boxShadow": "inset 0 0 0 1px #ccc",
              "fontSize": "11px",
              "padding": "4px 10% 3px",
              "width": "80%",
            }
          }
          value="77"
        />
        <label
          htmlFor="rc-editable-input-4"
          onMouseDown={[Function]}
          style={
            {
              "color": "#222",
              "cursor": undefined,
              "display": "block",
              "fontSize": "11px",
              "paddingBottom": "4px",
              "paddingTop": "3px",
              "textAlign": "center",
              "textTransform": "capitalize",
            }
          }
        >
          b
        </label>
      </div>
    </div>
    <div
      style={
        {
          "display": undefined,
          "flex": "1",
          "paddingLeft": "6px",
        }
      }
    >
      <div
        style={
          {
            "position": "relative",
          }
        }
      >
        <input
          id="rc-editable-input-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          spellCheck="false"
          style={
            {
              "border": "none",
              "boxShadow": "inset 0 0 0 1px #ccc",
              "fontSize": "11px",
              "padding": "4px 10% 3px",
              "width": "80%",
            }
          }
          value="100"
        />
        <label
          htmlFor="rc-editable-input-5"
          onMouseDown={[Function]}
          style={
            {
              "color": "#222",
              "cursor": undefined,
              "display": "block",
              "fontSize": "11px",
              "paddingBottom": "4px",
              "paddingTop": "3px",
              "textAlign": "center",
              "textTransform": "capitalize",
            }
          }
        >
          a
        </label>
      </div>
    </div>
  </div>
  <div
    className="flexbox-fix"
    style={
      {
        "borderTop": "1px solid #eee",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 -10px",
        "padding": "10px 0 0 10px",
        "position": "relative",
      }
    }
  >
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#D0021B",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#D0021B"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#F5A623",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#F5A623"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#F8E71C",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#F8E71C"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#8B572A",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#8B572A"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#7ED321",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#7ED321"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#417505",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#417505"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#BD10E0",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#BD10E0"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#9013FE",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#9013FE"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#4A90E2",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#4A90E2"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#50E3C2",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#50E3C2"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#B8E986",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#B8E986"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#000000",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#000000"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#4A4A4A",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#4A4A4A"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#9B9B9B",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#9B9B9B"
        />
      </span>
    </div>
    <div
      style={
        {
          "height": "16px",
          "margin": "0 10px 10px 0",
          "width": "16px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#FFFFFF",
              "borderRadius": "3px",
              "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#FFFFFF"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`SketchFields renders correctly 1`] = `
<div
  className="flexbox-fix"
  style={
    {
      "display": "flex",
      "paddingTop": "4px",
    }
  }
>
  <div
    style={
      {
        "flex": "2",
      }
    }
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <input
        id="rc-editable-input-21"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck="false"
        style={
          {
            "border": "none",
            "boxShadow": "inset 0 0 0 1px #ccc",
            "fontSize": "11px",
            "padding": "4px 10% 3px",
            "width": "80%",
          }
        }
        value="FF0000"
      />
      <label
        htmlFor="rc-editable-input-21"
        onMouseDown={[Function]}
        style={
          {
            "color": "#222",
            "cursor": undefined,
            "display": "block",
            "fontSize": "11px",
            "paddingBottom": "4px",
            "paddingTop": "3px",
            "textAlign": "center",
            "textTransform": "capitalize",
          }
        }
      >
        hex
      </label>
    </div>
  </div>
  <div
    style={
      {
        "flex": "1",
        "paddingLeft": "6px",
      }
    }
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <input
        id="rc-editable-input-22"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck="false"
        style={
          {
            "border": "none",
            "boxShadow": "inset 0 0 0 1px #ccc",
            "fontSize": "11px",
            "padding": "4px 10% 3px",
            "width": "80%",
          }
        }
        value="255"
      />
      <label
        htmlFor="rc-editable-input-22"
        onMouseDown={[Function]}
        style={
          {
            "color": "#222",
            "cursor": undefined,
            "display": "block",
            "fontSize": "11px",
            "paddingBottom": "4px",
            "paddingTop": "3px",
            "textAlign": "center",
            "textTransform": "capitalize",
          }
        }
      >
        r
      </label>
    </div>
  </div>
  <div
    style={
      {
        "flex": "1",
        "paddingLeft": "6px",
      }
    }
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <input
        id="rc-editable-input-23"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck="false"
        style={
          {
            "border": "none",
            "boxShadow": "inset 0 0 0 1px #ccc",
            "fontSize": "11px",
            "padding": "4px 10% 3px",
            "width": "80%",
          }
        }
        value="0"
      />
      <label
        htmlFor="rc-editable-input-23"
        onMouseDown={[Function]}
        style={
          {
            "color": "#222",
            "cursor": undefined,
            "display": "block",
            "fontSize": "11px",
            "paddingBottom": "4px",
            "paddingTop": "3px",
            "textAlign": "center",
            "textTransform": "capitalize",
          }
        }
      >
        g
      </label>
    </div>
  </div>
  <div
    style={
      {
        "flex": "1",
        "paddingLeft": "6px",
      }
    }
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <input
        id="rc-editable-input-24"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck="false"
        style={
          {
            "border": "none",
            "boxShadow": "inset 0 0 0 1px #ccc",
            "fontSize": "11px",
            "padding": "4px 10% 3px",
            "width": "80%",
          }
        }
        value="0"
      />
      <label
        htmlFor="rc-editable-input-24"
        onMouseDown={[Function]}
        style={
          {
            "color": "#222",
            "cursor": undefined,
            "display": "block",
            "fontSize": "11px",
            "paddingBottom": "4px",
            "paddingTop": "3px",
            "textAlign": "center",
            "textTransform": "capitalize",
          }
        }
      >
        b
      </label>
    </div>
  </div>
  <div
    style={
      {
        "display": undefined,
        "flex": "1",
        "paddingLeft": "6px",
      }
    }
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <input
        id="rc-editable-input-25"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck="false"
        style={
          {
            "border": "none",
            "boxShadow": "inset 0 0 0 1px #ccc",
            "fontSize": "11px",
            "padding": "4px 10% 3px",
            "width": "80%",
          }
        }
        value="100"
      />
      <label
        htmlFor="rc-editable-input-25"
        onMouseDown={[Function]}
        style={
          {
            "color": "#222",
            "cursor": undefined,
            "display": "block",
            "fontSize": "11px",
            "paddingBottom": "4px",
            "paddingTop": "3px",
            "textAlign": "center",
            "textTransform": "capitalize",
          }
        }
      >
        a
      </label>
    </div>
  </div>
</div>
`;

exports[`SketchPresetColors renders correctly 1`] = `
<div
  className="flexbox-fix"
  style={
    {
      "borderTop": "1px solid #eee",
      "display": "flex",
      "flexWrap": "wrap",
      "margin": "0 -10px",
      "padding": "10px 0 0 10px",
      "position": "relative",
    }
  }
>
  <div
    style={
      {
        "height": "16px",
        "margin": "0 10px 10px 0",
        "width": "16px",
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "#fff",
            "borderRadius": "3px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "width": "100%",
          }
        }
        tabIndex={0}
        title="#fff"
      />
    </span>
  </div>
  <div
    style={
      {
        "height": "16px",
        "margin": "0 10px 10px 0",
        "width": "16px",
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "#999",
            "borderRadius": "3px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "width": "100%",
          }
        }
        tabIndex={0}
        title="#999"
      />
    </span>
  </div>
  <div
    style={
      {
        "height": "16px",
        "margin": "0 10px 10px 0",
        "width": "16px",
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "#000",
            "borderRadius": "3px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "width": "100%",
          }
        }
        tabIndex={0}
        title="#000"
      />
    </span>
  </div>
</div>
`;

exports[`SketchPresetColors with custom titles renders correctly 1`] = `
<div
  className="flexbox-fix"
  style={
    {
      "borderTop": "1px solid #eee",
      "display": "flex",
      "flexWrap": "wrap",
      "margin": "0 -10px",
      "padding": "10px 0 0 10px",
      "position": "relative",
    }
  }
>
  <div
    style={
      {
        "height": "16px",
        "margin": "0 10px 10px 0",
        "width": "16px",
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "#fff",
            "borderRadius": "3px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "width": "100%",
          }
        }
        tabIndex={0}
        title="white"
      />
    </span>
  </div>
  <div
    style={
      {
        "height": "16px",
        "margin": "0 10px 10px 0",
        "width": "16px",
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "#999",
            "borderRadius": "3px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "width": "100%",
          }
        }
        tabIndex={0}
        title="gray"
      />
    </span>
  </div>
  <div
    style={
      {
        "height": "16px",
        "margin": "0 10px 10px 0",
        "width": "16px",
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "#000",
            "borderRadius": "3px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "width": "100%",
          }
        }
        tabIndex={0}
        title="#000"
      />
    </span>
  </div>
  <div
    style={
      {
        "height": "16px",
        "margin": "0 10px 10px 0",
        "width": "16px",
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "#f00",
            "borderRadius": "3px",
            "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "width": "100%",
          }
        }
        tabIndex={0}
        title="#f00"
      />
    </span>
  </div>
</div>
`;
